Implemented the canonical timer with my own Flux implementation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Basic Example</h1>
+    <div id="container"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
