rendered both counter and curve

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>Basic Example</h1>
-    <div id="container"></div>
+    <div id="container_clock"></div>
+    <div id="container_curve"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
