renders random curves in a loop

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Basic Example</title>
+    <style>
+      svg {
+        border: 1px red solid;
+        margin: 5px;
+        width: calc(25% - 12px);
+        height: 300px;
+      }
+    </style>
   </head>
   <body>
     <h1>Basic Example</h1>
