finished adding the test pages

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <section>
       <h2>The Implementations</h2>
       <p><a href="https://github.com/ybot1122/react-flux-web-workers">source</a></p>
-      <p><span>SEQUENTIAL</span> - the interpolation step will block</p>
-      <p><span>ASYNC</span> - interpolation step is wrapped in a setTimeout()</p>
-      <p><span>WEBWORKERS</span> - the store invokes the web worker functions using the worker API</p>
+      <p><span><a href="./sequential/index.html" target="_blank">SEQUENTIAL</a></span> - the interpolation step will block</p>
+      <p><span><a href="./async/index.html" target="_blank">ASYNC</a></span> - interpolation step is wrapped in a setTimeout()</p>
+      <p><span><a href="./webworker/index.html" target="_blank">WEBWORKERS</a></span> - the store invokes the web worker functions using the worker API</p>
     </section>
 
     <section>
