change spec to setup

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <section>
-      <h2>The Spec</h2>
+      <h2>The Setup</h2>
       <p>We start with an array of 2134 values, and shuffle it to create 200 unique sequences.</p>
       <p>We import an excerpt of the d3 library to do basis interpolation for each sequence.</p>
       <p>We dynamically render an SVG for each sequence, using the interpolated line as data</p>
