--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    
     <section>
       <h1>React-Flux Web Workers Demo</h1>
-      <h3>a simplistic flux implementation for using web workers</h3>
+      <h3>react + flux + web workers</h3>
     </section>
 
     <section>
@@ -43,7 +43,7 @@
     </section>
 
     <section>
-      <h2>The Implementations</h2>
+      <h2>Interpolation Step Implementation</h2>
       <p><a href="https://github.com/ybot1122/react-flux-web-workers">source</a></p>
       <p><span><a href="./sequential/index.html" target="_blank">SEQUENTIAL</a></span> - the interpolation step will block</p>
       <p><span><a href="./async/index.html" target="_blank">ASYNC</a></span> - interpolation step is wrapped in a setTimeout()</p>
@@ -58,6 +58,7 @@
     <section>
       <h2>Known Confounding Conditions</h2>
       <p>Each implementation generates its own set of 200 sequences. They should all be using the same set.</p>
+      <p>The greatness of this implementation of Flux automatically makes all implementations an optimal and performant solution.</p>
     </section>
   </body>
 </html>
